feature2 text edit

--- a/test.html
+++ b/test.html
@@ -6,11 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>hello world</h1>
-    <h2>this is the feature2 page</h2>
-        <h2>this is the feature2 page</h2>
-
-            <h2>this is the feature2 page</h2>
+    <h1>feature2</h1>
+    
 
   </body>
 </html>
